  * Reduce size of VarintParse code in protocol buffers, by calling the shared
    routine after handling just one-byte varint encoding inline, rather than
    handling one-byte and two-byte varints inline.
  * Avoid inlining some large heavily duplicated routines in repeated_ptr_field.h
  * Add ReflectiveProtoHook to Reflection.
  * Turns on table-driven parser for reflection based objects.


  Kotlin
  * Suppress deprecation warnings in Kotlin generated code.
  * Kotlin generated code comments now use kdoc format instead of javadoc.
  * Escape keywords in package names in proto generated code
  * Add Kotlin enum int value getters and setters

  Java
  * Performance improvement for repeated use of FieldMaskUtil#merge by caching
    constructed FieldMaskTrees.
  * Optimized Java proto serialization gencode for protos having many extension ranges with few fields in between.

  Python
  * Changes ordering of printed fields in .pyi files from lexicographic to the same ordering found in the proto descriptor.
  * Adds GeneratedCodeInfo annotations to python proto .pyi outputs as a base64 encoded docstring in the last line of the .pyi file for code analysis tools.
  * Fix message factory's behavior in python cpp extension to return same message classes for same descriptor, even if the factories are different.

  Compiler
  * Print full path name of source .proto file on error

2022-08-09 version 21.5 (C++/Java/Python/PHP/Objective-C/C#/Ruby)

  PHP
  * Added getContainingOneof and getRealContainingOneof to descriptor.
  * fix PHP readonly legacy files for nested messages

  Python
  * Fixed comparison of maps in Python.

2022-07-25 version 21.4 (C++/Java/Python/PHP/Objective-C/C#/Ruby)

  C++
  * Reduce the required alignment of ArenaString from 8 to 4 (#10298)


2022-07-19 version 21.3 (C++/Java/Python/PHP/Objective-C/C#/Ruby)
  C++
  * Add header search paths to Protobuf-C++.podspec (#10024)
  * Fixed Visual Studio constinit errors (#10232)