@@ -20,6 +20,8 @@
   * Avoid inlining some large heavily duplicated routines in repeated_ptr_field.h
   * Add ReflectiveProtoHook to Reflection.
   * Turns on table-driven parser for reflection based objects.
+  * Save code space by avoiding inlining of large-in-aggregate code-space MessageLite::~MessageLite destructor.
+  * Undefine the macro `linux` when compiling protobuf
 
 
   Kotlin
